XP theme disabled for mobile devices, z-index fix for toast notifications etc

--- a/Applications/Settings/style.css
+++ b/Applications/Settings/style.css
@@ -1,5 +1,6 @@
 #current_theme_preview_container {
     display: flex;
+    align-items: center;
     margin-bottom: 16px;
     div {
         margin: 8px;
@@ -12,6 +13,7 @@
 
 #current_theme_preview {
     width: 50%;
+    height: fit-content;
 }
 
 li {
